# cpf-serverless-python

./: .flake8  .funcignore  .gitignore  COMMIT_CONVENTION.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  trigger.txt
.github/: pull_request_template.md
.github/workflows/: deploy.yml
cpf_validation/: __init__.py
docs/: deployment-guide.md
src/core/models/: http_models.py
src/core/utils/: logger.py  rate_limiter.py
src/functions/cpf_validation/: .funcignore  function_app.py  host.json
tests/: conftest.py
tests/unit/: test_cpf_validation_endpoint.py  test_cpf_validator.py  test_function_app.py  test_rate_limiter.py
