[tool.poetry]
name = "cpf-serverless-python"
version = "0.1.0"
description = ""
authors = ["Julio Okuda <julio.okuda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
azure-functions = "^1.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
